# ip2whois-ocaml

./: README.md  dune-project  ip2whois.opam
ip2whois/: ip2whois.opam
ip2whois/lib/: dune  ip2whois.mli
ip2whois/test/: dune  ip2whoistest.ml
lib/: ip2whois.ml
